--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/crypto-js": "^4.0.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.12",
     "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.4",
-    "@types/crypto-js": "^4.0.1",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3"
+    "@types/react-dom": "^17.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
