--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
